--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
