--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^7.4.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
@@ -19,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
     "react-native-calendars": "^1.1300.0",
+    "react-native-modal-datetime-picker": "^17.0.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
