--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
     "expo": "~49.0.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
@@ -22,9 +23,9 @@
     "react-native-calendars": "^1.1300.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-modal-datetime-picker": "^17.0.0",
-    "react-native-reanimated": "^3.4.2",
-    "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
     "react-navigation": "^4.4.4",
