--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-native-web": "~0.19.6",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
