--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "react-native-calendars": "^1.1300.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-modal-datetime-picker": "^17.0.0",
+    "react-native-modalbox": "^2.0.2",
     "react-native-paper": "^5.10.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-slider": "^0.11.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
     "react-navigation": "^4.4.4",
