--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "axios": "^1.4.0",
     "expo": "~49.0.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
     "react-native-calendars": "^1.1300.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-modal-datetime-picker": "^17.0.0",
@@ -37,6 +38,7 @@
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
+    "universal-cookie": "^6.1.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
