--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
+    "universal-cookie": "^6.1.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
